--- a/index.html
+++ b/index.html
@@ -1,8 +1,40 @@
 <html>
     <head>
-        <title>My Webpage</title>
+        <title>Coffee</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css">
+        <style>
+
+        </style>
     </head>
     <body>
-        Hello, world!
+        <div id="top">
+            <p id="title">Coffee</p>
+        </div>
+        <div id="middle">
+            <div class="container-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Coffee_Beans.jpg/800px-Coffee_Beans.jpg" class="img" alt="Responsive image" align="right" width="40%"><p id="intro">Coffee is a brewed drink prepared from roasted coffee beans, the seeds of berries from certain Coffea species. The genus Coffea is native to tropical Africa (specifically having its origin in Ethiopia and Sudan) and Madagascar, the Comoros, Mauritius, and Réunion in the Indian Ocean.[2] Coffee plants are now cultivated in over 70 countries, primarily in the equatorial regions of the Americas, Southeast Asia, Indian subcontinent, and Africa. The two most commonly grown are C. arabica and C. robusta. Once ripe, coffee berries are picked, processed, and dried. Dried coffee seeds (referred to as "beans") are roasted to varying degrees, depending on the desired flavor. Roasted beans are ground and then brewed with near-boiling water to produce the beverage known as coffee.
+
+                                    Coffee is darkly colored, bitter, slightly acidic and has a stimulating effect in humans, primarily due to its caffeine content.[3] It is one of the most popular drinks in the world,[4] and it can be prepared and presented in a variety of ways (e.g., espresso, French press, café latte). It is usually served hot, although iced coffee is a popular alternative. Clinical studies indicate that moderate coffee consumption is benign or mildly beneficial in healthy adults, with continuing research on whether long-term consumption lowers the risk of some diseases, although those long-term studies are of generally poor quality.[5]
+
+                                    The earliest credible evidence of coffee-drinking appears in modern-day Yemen in southern Arabia in the middle of the 15th century in Sufi shrines.[6] It was here in Arabia that coffee seeds were first roasted and brewed in a similar way to how it is now prepared. But the coffee seeds had to be first exported from East Africa to Yemen, as the Coffea arabica plant is thought to have been indigenous to the former.[7] The Yemenis obtained their coffee via Somali traders from Berbera (who in turn procured the beans from the Ethiopian Highlands) and began to cultivate the seed. By the 16th century, the drink had reached Persia, Turkey, and North Africa. From there, it spread to Europe and the rest of the world.
+
+                                    As of 2016, Brazil was the leading grower of coffee beans, producing one-third of the world total. Coffee is a major export commodity, being the top legal agricultural export for numerous countries.[4][8][not in citation given] It is one of the most valuable commodities exported by developing countries. Green, unroasted coffee is one of the most traded agricultural commodities in the world.[9] Some controversy has been associated with coffee cultivation and the way developed countries trade with developing nations, as well as the impact on the environment with regards to the clearing of land for coffee-growing and water use. Consequently, the markets for fair trade and organic coffee are expanding, notably in the USA.[10]</p>
+                            </p>
+                        </div>
+                    </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <a class="btn btn-primary" href="page3.html" role="button">Go to page 3</a>
+                <div class="col"></div>
+                <a class="btn btn-primary" href="page1.html" role="button">Go to page 1</a>
+            </div>
+        </div>
     </body>
 </html>
