--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
+        <style>
+            @media (max-width: 576px) {
+                #title
+                {
+                    font-size: 50px;
+                    padding: 40px;
+                }
+                #intro
+                {
+                    font-size: 12px;
+                    padding: 20px;
+                }
+                #top{
+                    height: 150px;
+                }
+            }
+        </style>
     </head>
     <body>
         <div id="top">
