Added smaller margin for img

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
                 #intro
                 {
                     font-size: 12px;
-                    padding: 20px;
+                    padding: 15px;
                 }
                 #top{
                     height: 150px;
+                }
+                img{
+                    margin: 20px;
                 }
             }
         </style>
