--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,16 @@
             <p>Coffee<p>
         </div>
         <div id="middle">
+            <div class="container-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Coffee_beans_unroasted.jpg/1280px-Coffee_beans_unroasted.jpg" class="img" alt="Responsive image" align="right" width="40%"><p id="intro">The word coffee appears to have derived from the name of the region where coffee beans were first used by a herder in the 6th or 9th century (depending on author): kaffa (from the Keffa Zone in southwestern Ethiopia) derived from Kaffa Province, which was the name of the region in ancient Abyssinia. The word "coffee" entered the English language in 1582 via the Dutch koffie, borrowed from the Ottoman Turkish kahve, borrowed in turn from the Arabic qahwah. The Arabic word qahwah was traditionally held to refer to a type of wine whose etymology is given by Arab lexicographers as deriving from the verb qahiya, "to lack hunger", in reference to the drink's reputation as an appetite suppressant. It has also been proposed that the source may be the Proto-Central Semitic root q-h-h meaning "dark".
 
+The term "coffee pot" dates from 1705. The expression "coffee break" was first attested in 1952.
+                            </p>
+                        </div>
+                    </div>
+            </div>
         </div>
         <div class="container-fluid">
             <div class="row">
