--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,80 @@
             <p>Coffee<p>
         </div>
         <div id="middle">
+            <div class="container-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <img src="https://c.pxhere.com/photos/11/c2/aroma_barista_brew_brown_caf_caffeine_close_up_coffee-1504291.jpg!d" class="img" alt="Responsive image" align="right" width="23%">
+                            <img src="https://c.pxhere.com/photos/e6/df/coffee_making_cafe_shop_espresso_drink_business_restaurant-845937.jpg!d" class="img" alt="Responsive image" align="left" width="23%">
+                            <p id="intro">Depending on the type of coffee and method of preparation, the caffeine content of a single serving can vary greatly. The caffeine content of a cup of coffee varies depending mainly on the brewing method, and also on the coffee variety. According to the USDA National Nutrient Database, an 8-ounce (237 ml) cup of "coffee brewed from grounds" contains 95 mg caffeine, whereas an espresso (25 ml) contains 53 mg.
 
+                                            According to an article in the Journal of the American Dietetic Association, coffee has the following caffeine content, depending on how it is prepared:
+                            </p>
+                            <table class="table table-striped">
+                              <thead>
+                                <tr>
+                                  <th scope="col"></th>
+                                  <th scope="col">Serving size</th>
+                                  <th scope="col">Caffeine content</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <th scope="row">Brewed</th>
+                                  <td>7 oz, 207 ml</td>
+                                  <td>80–135 mg</td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Drip</th>
+                                  <td>7 oz, 207 ml</td>
+                                  <td>115–175 mg</td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Espresso</th>
+                                  <td>1.5–2 oz, 45–60 ml</td>
+                                  <td>100 mg</td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            <p id="intro">While the percent of caffeine content in coffee seeds themselves diminishes with increased roast level, the opposite is true for coffee brewed from different grinds and brewing methods using the same proportion of coffee to water volume. The coffee sack (similar to the French press and other steeping methods) extracts more caffeine from dark roasted seeds; the percolator and espresso methods extract more caffeine from light roasted seeds:
+                            </p>
+                            <table class="table table-striped ">
+                              <thead>
+                                <tr>
+                                  <th scope="col"></th>
+                                  <th scope="col">Light roast</th>
+                                  <th scope="col">Medium roast</th>
+                                  <th scope="col">Dark roast</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <th scope="row">Coffee sack – coarse grind</th>
+                                  <td>0.046</td>
+                                  <td>0.045</td>
+                                  <td>0.054</td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Percolator – coarse grind</th>
+                                  <td>0.068</td>
+                                  <td>0.065</td>
+                                  <td>0.060</td>
+                                </tr>
+                                <tr>
+                                  <th scope="row">Espresso – fine grind</th>
+                                  <td>0.069</td>
+                                  <td>0.062</td>
+                                  <td>0.061</td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            <p id="intro">Coffea arabica normally contains about half the caffeine of Coffea robusta. A Coffea arabica bean containing very little caffeine was discovered in Ethiopia in 2004.
+
+                                            See Low caffeine coffee.
+                            </p>
+                        </div>
+                    </div>
+            </div>
         </div>
         <div class="container-fluid">
             <div class="row">
