--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,59 @@
             <p>Coffee<p>
         </div>
         <div id="middle">
-
+            <div class="container-fluid">
+                    <div class="row">
+                        <div id="intro">
+                            <p>List of coffee drinks</p>
+                            <ol>
+                                <li>Infused</li>
+                                    <ul>
+                                        <li>Drip or filtered</li>
+                                        <li>French press or cafetière</li>
+                                        <li>Cold brew</li>
+                                    </ul>
+                                <li>Boiled</li>
+                                    <ul>
+                                        <li>Percolated</li>
+                                        <li>Turkish coffee</li>
+                                        <li>Moka</li>
+                                    </ul>
+                                <li>Vacuum coffee</li>
+                                <li>Espresso</li>
+                                <li>Combinations</li>
+                                    <ul>
+                                        <li>Coffee with milk</li>
+                                        <li>Coffee with Condensed Milk</li>
+                                        <li>Coffee with espresso</li>
+                                        <li>Coffee with tea</li>
+                                        <li>Coffee with alcohol</li>
+                                    </ul>
+                                <li>Iced</li>
+                                    <ol>
+                                        <li>Frappé</li>
+                                        <li>Greek Freddo preparations</li>
+                                            <ul>
+                                                <li>Freddo Espresso</li>
+                                                <li>Freddo Cappuccino</li>
+                                            </ul>
+                                        <li>Other</li>
+                                    </ol>
+                                <li>Instant coffee</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div id="links">
+                            <p>Follow these links for further reading</p>
+                            <ul>
+                                <li><a href="https://en.wikipedia.org/wiki/Coffee" target="_blank" rel="noopener noreferrer">Wikipedia</a></li>
+                                <li><a href="http://www.ncausa.org/about-coffee/what-is-coffee" target="_blank" rel="noopener noreferrer">National Coffee Association</a></li>
+                                <li><a href="https://www.coffeereview.com/" target="_blank" rel="noopener noreferrer">Coffee Review</a></li>
+                                <li><a href="https://www.theguardian.com/food/coffee" target="_blank" rel="noopener noreferrer">The Guardian</a></li>
+                            </ul>
+                        </div>
+                    </div>
+            </div>
         </div>
         <div class="container-fluid">
             <div class="row">
