Changed for saas

--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
                         <div class="col">
                             <img src="https://c.pxhere.com/photos/11/c2/aroma_barista_brew_brown_caf_caffeine_close_up_coffee-1504291.jpg!d" class="img" alt="Responsive image" align="right" width="23%">
                             <img src="https://c.pxhere.com/photos/e6/df/coffee_making_cafe_shop_espresso_drink_business_restaurant-845937.jpg!d" class="img" alt="Responsive image" align="left" width="23%">
-                            <p id="intro">Depending on the type of coffee and method of preparation, the caffeine content of a single serving can vary greatly. The caffeine content of a cup of coffee varies depending mainly on the brewing method, and also on the coffee variety. According to the USDA National Nutrient Database, an 8-ounce (237 ml) cup of "coffee brewed from grounds" contains 95 mg caffeine, whereas an espresso (25 ml) contains 53 mg.
+                            <p class="intro">Depending on the type of coffee and method of preparation, the caffeine content of a single serving can vary greatly. The caffeine content of a cup of coffee varies depending mainly on the brewing method, and also on the coffee variety. According to the USDA National Nutrient Database, an 8-ounce (237 ml) cup of "coffee brewed from grounds" contains 95 mg caffeine, whereas an espresso (25 ml) contains 53 mg.
 
                                             According to an article in the Journal of the American Dietetic Association, coffee has the following caffeine content, depending on how it is prepared:
                             </p>
@@ -44,7 +44,7 @@
                                 </tr>
                               </tbody>
                             </table>
-                            <p id="intro">While the percent of caffeine content in coffee seeds themselves diminishes with increased roast level, the opposite is true for coffee brewed from different grinds and brewing methods using the same proportion of coffee to water volume. The coffee sack (similar to the French press and other steeping methods) extracts more caffeine from dark roasted seeds; the percolator and espresso methods extract more caffeine from light roasted seeds:
+                            <p class="intro">While the percent of caffeine content in coffee seeds themselves diminishes with increased roast level, the opposite is true for coffee brewed from different grinds and brewing methods using the same proportion of coffee to water volume. The coffee sack (similar to the French press and other steeping methods) extracts more caffeine from dark roasted seeds; the percolator and espresso methods extract more caffeine from light roasted seeds:
                             </p>
                             <table class="table table-striped ">
                               <thead>
@@ -76,7 +76,7 @@
                                 </tr>
                               </tbody>
                             </table>
-                            <p id="intro">Coffea arabica normally contains about half the caffeine of Coffea robusta. A Coffea arabica bean containing very little caffeine was discovered in Ethiopia in 2004.
+                            <p class="intro">Coffea arabica normally contains about half the caffeine of Coffea robusta. A Coffea arabica bean containing very little caffeine was discovered in Ethiopia in 2004.
 
                                             See Low caffeine coffee.
                             </p>
