--- a/page3.html
+++ b/page3.html
@@ -11,7 +11,7 @@
         <div id="middle">
             <div class="container-fluid">
                     <div class="row">
-                        <div id="intro">
+                        <div class="intro">
                             <p>List of coffee drinks</p>
                             <ol>
                                 <li>Infused</li>
